<resources>
    <string name="app_name">Score24Seven</string>
    <string name="Admob_App_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="TopOnAppID" translatable="false">h68b226290a6e0</string>
    <string name="TopOnAppKEY" translatable="false">a98d914c6aea98703be4773a24c68210d</string>
    <string name="TopOnBanner" translatable="false">n68b2263ed9544</string>
    <string name="TopOnInterstitial" translatable="false">n68b2263f4f55b</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text">live football is an app that provides you Live score, schedule and leagues.</string>
    <string name="age">Age</string>
    <string name="away">Away</string>
    <string name="back">Back</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="country">Country</string>
    <string name="defence">Defence</string>
    <string name="draw">Draw</string>
    <string name="admob_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_inters">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_app_open">ca-app-pub-3940256099942544/9257395921</string>
    <string name="admob_native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="gmts_ad_format_load_success_title">%1$s ad loaded successfully</string>
    <string name="gmts_ad_load">Ad Load</string>
    <string name="gmts_ad_load_in_progress_title">Loading ad...</string>
    <string name="gmts_ad_source_custom_event_title_format">Custom Event: %1$s</string>
    <string name="gmts_ad_unit_details_title">Ad Unit Details</string>
    <string name="gmts_ad_unit_format_label_format">%1$s ad unit</string>
    <string name="gmts_ad_unit_id">Ad unit ID</string>
    <string name="gmts_ad_units">Ad Units</string>
    <string name="gmts_adapter">Adapter</string>
    <string name="gmts_adapter_initialization_status">Adapter Initialization Status</string>
    <string name="gmts_button_agree">Agree</string>
    <string name="gmts_button_cancel">Cancel</string>
    <string name="gmts_button_load_ad">Load Ad</string>
    <string name="gmts_button_load_ads">Load Ads</string>
    <string name="gmts_button_ok">OK</string>
    <string name="gmts_button_show_ad">Show Ad</string>
    <string name="gmts_button_try_again">Try Again</string>
    <string name="gmts_compatible_with_format_ads">Compatible with %1$s ads</string>
    <string name="gmts_custom_event">Custom Event</string>
    <string name="gmts_disclaimer_confirmation">"I've configured test ads and agree to the %1$s."</string>
    <string name="gmts_disclaimer_link_text">disclaimer</string>
    <string name="gmts_disclaimer_text">"When an account source fills ad requests but the ads don't receive any clicks, the ad source may suspect foul play, which can cause your account to be suspended. If you use test ads, however, the ad source understands that the ad requests are for testing only and you avoid the risk of account suspension."</string>
    <string name="gmts_disclaimer_title">Use test ads to avoid the risk of account suspension</string>
    <string name="gmts_error_internal_error">Internal error</string>
    <string name="gmts_error_invalid_request">Invalid request</string>
    <string name="gmts_error_missing_components_message">You need to fix some implementation errors before you can load an ad</string>
    <string name="gmts_error_missing_components_title">"Can't load ad"</string>
    <string name="gmts_error_network_error">Network error</string>
    <string name="gmts_error_no_fill_message">Your ad source may not be set up correctly. Check your setup and system logs, then try again.</string>
    <string name="gmts_error_no_fill_title">No fill from ad source</string>
    <string name="gmts_error_unsupported_ad_load_format">"Unsupported format for ad loading, expected Banner or Interstitial, got '%s'"</string>
    <string name="gmts_error_yield_partner_no_fill_message">Your yield partner may not be setup correctly. Check your setup and your system logs, then try again.</string>
    <string name="gmts_error_yield_partner_no_fill_title">No fill from yield partner</string>
    <string name="gmts_failing_ad_units">Failing Ad Units</string>
    <string name="gmts_format">Format</string>
    <string name="gmts_format_banner">Banner</string>
    <string name="gmts_format_banner_interstitial">Banner,Interstitial</string>
    <string name="gmts_format_interstitial">Interstitial</string>
    <string name="gmts_format_native">Native</string>
    <string name="gmts_format_rewarded">Rewarded</string>
    <string name="gmts_found">Found</string>
    <string name="gmts_info_label">Info</string>
    <string name="gmts_link_text_learn_more">Learn more</string>
    <string name="gmts_loading_ads_message">This could take up to 2 minutes based on the speed of your ad sources and your network connection.</string>
    <string name="gmts_loading_ads_title">Loading ads</string>
    <string name="gmts_log_text_app_id_missing">Google Mediation Test Suite not launching as the app ID is not provided in the app manifest. AdMob publishers should follow the instructions here: https://googlemobileadssdk.page.link/admob-android-update-manifest to add a valid App ID inside the AndroidManifest. Google Ad Manager publishers should follow instructions here: https://googlemobileadssdk.page.link/ad-manager-android-update-manifest.</string>
    <string name="gmts_log_text_device_not_registered">"Google Mediation Test Suite not launching in non-debuggable build as the device is not registered as a test device. Add the device hash (found in the logs, logged by 'Ads') as a test device to MediationTestSuite to use the mediation test suite on this device in a non-debuggable build."</string>
    <string name="gmts_manifest">Manifest</string>
    <string name="gmts_mapped_ad_unit_details_title">Mapped Ad Unit Details</string>
    <string name="gmts_mapped_ad_units">Mapped Ad Units</string>
    <string name="gmts_native_advertiser">- advertiser \"%1$s\"</string>
    <string name="gmts_native_body">- body \"%1$s\"</string>
    <string name="gmts_native_contains_video_false">- does not contain video asset</string>
    <string name="gmts_native_contains_video_true">- contains video asset</string>
    <string name="gmts_native_cta">- call to action \"%1$s\"</string>
    <string name="gmts_native_headline">- headline \"%1$s\"</string>
    <string name="gmts_native_icon">- icon \"%1$s\"</string>
    <string name="gmts_native_image">- main image \"%1$s\"</string>
    <string name="gmts_native_price">- price \"%1$s\"</string>
    <string name="gmts_native_star_rating">- star rating \"%1$f\"</string>
    <string name="gmts_native_store">- store \"%1$s\"</string>
    <string name="gmts_no_ad_units_found">No mediated ad units found.</string>
    <string name="gmts_no_yield_groups_found">No yield groups found.</string>
    <string name="gmts_no_yield_partners_found">No yield partners found.</string>
    <string name="gmts_not_found">Not found</string>
    <string name="gmts_not_tested_label">Untested</string>
    <string name="gmts_not_tested_message">Make sure your ad unit is set up correctly by loading at least one ad. Use test ads instead of real ads to avoid policy violations.</string>
    <string name="gmts_not_tested_title">"You haven't loaded an ad yet"</string>
    <string name="gmts_num_ads_selected">%d selected</string>
    <string name="gmts_open_bidding_load_error_inititialization_format">"Your adapter didn't initialize correctly. %1$s."</string>
    <string name="gmts_open_bidding_load_error_test_device_format">You need to register this as a test device before loading ads from Open Bidding partners. %1$s.</string>
    <string name="gmts_open_bidding_partner">Open Bidding Partner</string>
    <string name="gmts_open_bidding_partner_format">%1$s - Open Bidding partner</string>
    <string name="gmts_open_bidding_partners">Open Bidding Partners</string>
    <string name="gmts_parameter_label">Parameter</string>
    <string name="gmts_placeholder_search_ad_source">Search by ad source name</string>
    <string name="gmts_placeholder_search_ad_units">Search by ad unit ID, ad source, or format</string>
    <string name="gmts_placeholder_search_yield_groups">Search by ID, yield partner, or format</string>
    <string name="gmts_placeholder_search_yield_partner">Search by yield partner name</string>
    <string name="gmts_register_device_button">Register device</string>
    <string name="gmts_register_device_detail">Register this device to see ad unit names instead of just ad unit IDs.</string>
    <string name="gmts_register_device_dismiss">Dismiss</string>
    <string name="gmts_register_device_title">Want to see ad unit names?</string>
    <string name="gmts_retrieved_assets">Retrieved assets</string>
    <string name="gmts_sdk">SDK</string>
    <string name="gmts_search_title">Search</string>
    <string name="gmts_section_ad_load">Ad Load</string>
    <string name="gmts_section_ad_source_configuration">Ad Source Configuration</string>
    <string name="gmts_section_ad_unit_info">Details</string>
    <string name="gmts_section_configuration_errors">Configuration Errors</string>
    <string name="gmts_section_implementation">Implementation</string>
    <string name="gmts_section_mapped_ad_unit_info">Mapped Ad Unit Info</string>
    <string name="gmts_section_missing_components">Missing Components</string>
    <string name="gmts_section_open_bidding_ad_sources">Open Bidding Ad Sources</string>
    <string name="gmts_section_open_bidding_yield_partners">Open Bidding Yield Partners</string>
    <string name="gmts_section_waterfall_ad_sources">Waterfall Ad Sources</string>
    <string name="gmts_section_waterfall_ad_yield_partners">Waterfall Yield Partners</string>
    <string name="gmts_section_working">Working</string>
    <string name="gmts_section_yield_group_info">Yield group details</string>
    <string name="gmts_section_yield_partner_configuration">Configuration</string>
    <string name="gmts_status_not_ready">Not Ready</string>
    <string name="gmts_status_ready">Ready</string>
    <string name="gmts_subtitle_open_bidding_ad_source">Open Bidding ad source</string>
    <string name="gmts_subtitle_waterfall_ad_source">Waterfall ad source</string>
    <string name="gmts_used_by">Used by</string>
    <string name="gmts_version_string_format">%1$s: v %2$s</string>
    <string name="gmts_working_ad_units">Working Ad Units</string>
    <string name="gmts_yield_groupID">Group ID</string>
    <string name="gmts_yield_group_details_title">Yield Group Details</string>
    <string name="gmts_yield_group_format_label_format">%1$s yield group</string>
    <string name="gmts_yield_groups">Yield Groups</string>
    <string name="home">Home</string>
    <string name="league_name">League Name</string>
    <string name="more">More</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="position">Position</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_me">Rate Me</string>
    <string name="recent_matches">Recent Matches</string>
    <string name="see_more">See More</string>
    <string name="share">Share</string>
    <string name="weekly_fixture">Weekly Fixture</string>
</resources>