<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="@color/main_color" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/headingRl" android:background="@color/main_color" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="15dp" android:paddingEnd="5dp">
            <ImageView android:id="@+id/menuIcon" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/more" android:scaleType="fitXY" android:layout_centerVertical="true"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more" android:layout_centerVertical="true" android:layout_marginStart="15dp" android:layout_toEndOf="@+id/menuIcon"/>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_below="@+id/headingLine" android:layout_marginStart="20dp" android:layout_marginEnd="20dp">
            <RelativeLayout android:id="@+id/aboutUsId" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:id="@+id/aboutUsIcon" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/noun_about_us_4149187" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
                <TextView android:textSize="16sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_us" android:layout_centerVertical="true" android:layout_marginStart="10dp" android:layout_toEndOf="@+id/aboutUsIcon"/>
                <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_baseline_arrow_forward_ios_24" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/shareId" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp">
                <ImageView android:id="@+id/shareImage" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/share" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
                <TextView android:textSize="16sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" android:layout_centerVertical="true" android:layout_marginStart="10dp" android:layout_toEndOf="@+id/shareImage"/>
                <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_baseline_arrow_forward_ios_24" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/rateRLId" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp">
                <ImageView android:id="@+id/rateMeId" android:layout_width="25dp" android:layout_height="25dp" android:src="@drawable/rate_me" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
                <TextView android:textSize="16sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_me" android:layout_centerVertical="true" android:layout_marginStart="10dp" android:layout_toEndOf="@+id/rateMeId"/>
                <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_baseline_arrow_forward_ios_24" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/privacyPolicyId" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp">
                <ImageView android:id="@+id/privacyPolicyImageView" android:layout_width="25dp" android:layout_height="25dp" android:src="@drawable/privacy_policy__2_" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
                <TextView android:textSize="16sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_policy" android:layout_centerVertical="true" android:layout_marginStart="10dp" android:layout_toEndOf="@+id/privacyPolicyImageView"/>
                <ImageView android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_baseline_arrow_forward_ios_24" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
        <View android:id="@+id/headingLine" android:background="@color/white" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@+id/headingRl"/>
    </RelativeLayout>
</FrameLayout>
