<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout android:id="@+id/headingRl"
            android:background="@color/main_color"
            android:paddingTop="10.0dip"
            android:paddingBottom="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15.0dip"
            android:paddingEnd="5.0dip">
            <ImageView android:id="@+id/menuIcon"
                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/home_icon"
                android:scaleType="fitXY"
                android:layout_centerVertical="true" />
            <TextView
                android:textSize="18.0sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_centerVertical="true"
                android:layout_marginStart="15.0dip"
                android:layout_toEndOf="@+id/menuIcon" />
        </RelativeLayout>
        <View android:id="@+id/headingLine"
            android:background="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_below="@+id/headingRl" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sliderLL"
            android:layout_width="fill_parent"
            android:layout_height="180.0dip"
            android:layout_below="@+id/headingLine">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/linearLayout"
                android:background="@drawable/bottom_round_corner"
                android:layout_width="fill_parent"
                android:layout_height="120.0dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/sliderLeagueUpcomingGame"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="15.0dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderAnimationDuration="800"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="800"
                app:sliderIndicatorGravity="bottom|center"
                app:sliderIndicatorMargin="15.0dip"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3.0dip"
                app:sliderIndicatorRadius="2.0dip"
                app:sliderIndicatorSelectedColor="@color/red"
                app:sliderIndicatorUnselectedColor="@color/secondary_color"
                app:sliderScrollTimeInSec="5"
                app:sliderStartAutoCycle="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/sliderLL">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <RelativeLayout
                    android:id="@+id/recentHeading"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="14.0sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recent_matches"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15.0dip" />
                    <TextView
                        android:textSize="14.0sp"
                        android:textColor="@color/active_color3"
                        android:id="@+id/seeMoreId"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foreground="?selectableItemBackground"
                        android:text="@string/see_more"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10.0dip"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recentMatchRecyclerview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:layout_marginStart="5.0dip"
                    android:layout_marginEnd="5.0dip" />
                <RelativeLayout
                    android:id="@+id/leagueHeading"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip">
                    <TextView android:textSize="14.0sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly_fixture"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15.0dip" />
                    <LinearLayout
                        android:background="@drawable/box_active_color_without_stroke"
                        android:layout_width="fill_parent"
                        android:layout_height="35.0dip"
                        android:layout_marginStart="10.0dip"
                        android:layout_marginEnd="10.0dip"
                        android:layout_toEndOf="@+id/text">
                        <SearchView
                            android:id="@+id/searchView"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:queryHint="@string/league_name" />
                    </LinearLayout>
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/leagueNameRecyclerViewId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip" />
            </LinearLayout>
        </ScrollView>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottiId"
            android:visibility="gone"
            android:layout_width="250.0dip"
            android:layout_height="200.0dip"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />
    </RelativeLayout>
</FrameLayout>