<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/top_round_corner_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:id="@+id/mainLL" android:padding="15dp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent">
            <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" app:cardCornerRadius="10dp" app:cardElevation="2dp">
                <LinearLayout android:orientation="vertical" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <LinearLayout android:layout_width="match_parent" android:layout_height="80dp" android:weightSum="3">
                        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginStart="10dp">
                            <TextView android:textSize="12sp" android:textColor="@color/littleBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Height"/>
                            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/heightId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp"/>
                        </LinearLayout>
                        <View android:background="@color/littleBlack2" android:layout_width="0.5dp" android:layout_height="match_parent"/>
                        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                            <TextView android:textSize="12sp" android:textColor="@color/littleBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Weight"/>
                            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/weightId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp"/>
                        </LinearLayout>
                        <View android:background="@color/littleBlack2" android:layout_width="0.5dp" android:layout_height="match_parent"/>
                        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginEnd="10dp">
                            <TextView android:textSize="12sp" android:textColor="@color/littleBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/age"/>
                            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/ageId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp"/>
                        </LinearLayout>
                    </LinearLayout>
                    <View android:background="@color/littleBlack2" android:layout_width="match_parent" android:layout_height="0.5dp"/>
                    <LinearLayout android:layout_width="match_parent" android:layout_height="80dp" android:weightSum="3">
                        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginStart="10dp">
                            <TextView android:textSize="12sp" android:textColor="@color/littleBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Team"/>
                            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/teamNameId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="36"/>
                        </LinearLayout>
                        <View android:background="@color/littleBlack2" android:layout_width="0.5dp" android:layout_height="match_parent"/>
                        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                            <TextView android:textSize="12sp" android:textColor="@color/littleBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/position"/>
                            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/positionId" android:background="@drawable/box_active_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="36"/>
                        </LinearLayout>
                        <View android:background="@color/littleBlack2" android:layout_width="0.5dp" android:layout_height="match_parent"/>
                        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginEnd="10dp">
                            <TextView android:textSize="12sp" android:textColor="@color/littleBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/country"/>
                            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/shirtNumberId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="36"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp">
                <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/overall_rating"/>
                <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/secondary_color" android:id="@+id/ratingId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="5dp"/>
            </LinearLayout>
        </LinearLayout>
        <include android:orientation="vertical" android:id="@+id/nothingFoundLL" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" layout="@layout/nothing_found"/>
        <com.airbnb.lottie.LottieAnimationView android:id="@+id/lottiId" android:visibility="gone" android:layout_width="250dp" android:layout_height="200dp" android:layout_centerInParent="true" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/loading"/>
    </RelativeLayout>
</FrameLayout>
